--- a/CLCL2/Properties/Settings.settings
+++ b/CLCL2/Properties/Settings.settings
@@ -5,5 +5,8 @@
     <Setting Name="clipboardHistory" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="pinnedClipboardHistory" Type="System.Collections.Specialized.StringCollection" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
