--- a/CLCL2/Properties/Settings.settings
+++ b/CLCL2/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="pinnedClipboardHistory" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="historyItems" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">50</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
