Renamed VM to ViewModel

--- a/CLCL2/SimpleCLCL.csproj
+++ b/CLCL2/SimpleCLCL.csproj
@@ -117,7 +117,7 @@
     </ApplicationDefinition>
     <Compile Include="MouseCapture.cs" />
     <Compile Include="StringObject.cs" />
-    <Compile Include="VM.cs" />
+    <Compile Include="ViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
