--- a/CLCL2/App.config
+++ b/CLCL2/App.config
@@ -13,6 +13,9 @@
             <setting name="historyItems" serializeAs="String">
                 <value>50</value>
             </setting>
+            <setting name="PlaceHolder" serializeAs="String">
+                <value>&lt;placeholder&gt;</value>
+            </setting>
         </SimpleCLCL.Properties.Settings>
     </userSettings>
 </configuration>
