--- a/CLCL2/Properties/Settings.settings
+++ b/CLCL2/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="historyItems" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">50</Value>
     </Setting>
+    <Setting Name="PlaceHolder" Type="System.String" Scope="User">
+      <Value Profile="(Default)">&lt;placeholder&gt;</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
